# phenotyping-pipeline

./: .gitignore  CLAUDE.md  README.md  SETUP.md  dev.sh  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_edited_annotations.py  003_add_batch_name.py  004_add_custom_models.py  005_add_organism_to_custom_model.py  006_add_processing_state_columns.py  007_add_classes_to_analysis_batch.py  008_add_annotations_to_analysis_image.py
backend/app/: config.py  database.py  deps.py  logging_setup.py  main.py
backend/app/errors/: exceptions.py  handlers.py
backend/app/middleware/: cors.py  logging.py
backend/app/models/: __init__.py  analysis.py  app_settings.py  custom_model.py
backend/app/routers/: __init__.py  analyses.py  config.py  dashboard.py  health.py  inference.py  logs.py  models.py  overlay.py  settings.py  stages.py
backend/app/schemas/: __init__.py  analysis.py  config.py  detection.py  health.py  log.py  model.py
backend/app/services/: analysis_service.py  app_settings_service.py  batch_export.py  inference_service.py  log_buffer.py  model_registry.py  model_storage.py  model_upload_service.py  stage_broker.py
backend/data/: inference_config.yaml
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_config.py  test_e2e_integration.py  test_inference_service.py  test_log_buffer.py  test_model_upload_service.py  test_performance.py  test_schemas.py
backend/tests/test_routers/: test_config_router.py  (+2 more)
(+131 files in other folders)
