[project]
name = "phenotyping-backend"
version = "0.1.0"
description = "FastAPI backend for phenotyping ecosystem inference server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Phenotyping Team" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "opencv-python-headless>=4.10.0.84",
    "numpy>=2.0.0",
    "ultralytics>=8.3.0",
    "httpx>=0.27.2",
    "websockets>=12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["I", "E", "F", "W"]
ignore = []

[tool.isort]
profile = "black"
line_length = 88
